--- a/src/components/Who.css
+++ b/src/components/Who.css
@@ -9,20 +9,21 @@
     margin: 55px 0 55px 0;
 }
 .who-text{
-    padding: 50px 0 0 80px !important;
+    padding: 0px 0 0 80px !important;
 }
-.who-text h2
+.all-heading
 {
     font-family: "Oswald", sans-serif;
-    font-size: 36px;
+    font-size: 35px;
     margin-bottom: 20px;
-}
-.blue-div li i .usericon {
-   
-    margin: auto;
-    display: block;
-    text-align: center;
-}
+    border-left: 2px solid #FD5D02 ;
+    border-right: 2px solid #FD5D02 ;
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-transform: capitalize;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+} 
 .blue-div li {
     display: inline-block;
     padding: 15px 0 20px 25px;
@@ -40,9 +41,13 @@
     color: white;
     border-radius: 20px;
     padding: 30px 0 30px 0;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 .blue-div ul li h4{
   text-transform: capitalize;
   font-size: 20px;
+}
+.allp
+{
+    margin-top: 41px;
 }
