--- a/src/components/Service.css
+++ b/src/components/Service.css
@@ -1,50 +1,78 @@
-.container-fluid
-{
-  padding-left: 0px !important;
-  padding-right: 0px !important;
+/* Use a relative path from this CSS file to the image in src/assets/Images */
+.container-fluid {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
-.servicebg img
-{
+
+.servicebg img {
   width: 100%;
 }
-.service-inner
-{
-  background-image: "url('./assets/Images/service.png')";
+
+.service-inner {
+  /* path is relative to this CSS file (src/components -> ../assets/Images) */
+  background-image: url('../assets/Images/service.png');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100%;
-  padding: 50px 0px;
+  min-height: 420px; /* ensure the section is visible */
+  padding: 70px 0;
+  z-index: 1111111111111111;
 }
-.all-services
-{
-  margin-bottom: 25px;
+
+.all-services {
+    margin: 0px 15px 19px 0px;
+    position: relative;
+    z-index: 8888888888888;
+    overflow: hidden;
+    transition: 0.3s;
+    padding: 0 !important;
+    width: 32.2% !important;
 }
-.all-services img{
+.all-services img {
   width: 100%;
   height: auto;
+  transition: 0.3s;
 }
-.all-heading.cen-heading
-{
-  margin: auto;
 
+.all-heading.cen-heading {
+  margin: auto;
+  margin-bottom: 41px;
 }
-.main-services
-{
-margin-top: 40px !important;
+
+.main-services {
+  margin-top: 40px !important;
+  width: 70%;
+  margin: auto !important;
 }
-.inner-service-content
-{
+
+.inner-service-content {
   position: relative;
 }
+
 .ser-text {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    color: white;
-    background-color: rgba(1, 36, 81, 0.5);
-    padding: 10px 15px;
-    border-radius: 5px;
-    width: 100%;
+  position: absolute;
+  bottom: -109px;
+  left: 0;
+  color: white;
+  background-color: rgba(1, 36, 81, 0.5);
+  padding: 10px 15px;
+  border-radius: 0px;
+  width: 100%;
+   transition: all 0.4s ease-in-out !important;
+}
+.ser-text .allp.serp {
+  font-size: 14px;
+  color: white;
+  margin-top: 5px;
+}
+.ser-text h3 {
+  text-transform: capitalize;
+  font-size: 25px;
+  margin: 0;
+}
+.all-services:hover .ser-text {
+  display: block;
+  bottom: 0px;
+ 
 }
