--- a/src/components/Who.css
+++ b/src/components/Who.css
@@ -21,6 +21,8 @@
     width: fit-content;
     padding-left: 10px;
     padding-right: 10px;
+    text-align: center;
+    margin: auto;
     text-transform: capitalize;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 } 
@@ -49,5 +51,15 @@
 }
 .allp
 {
-    margin-top: 41px;
+    margin-top: 30px;
+    color: black;
+}
+
+.subtitle {
+    font-size: 23px;
+    text-transform: capitalize;
+    font-family: oswald, sans-serif;
+    color: black;
+    text-align: center;
+    margin-top: 17px;
 }
