--- a/src/components/Review.css
+++ b/src/components/Review.css
@@ -40,3 +40,13 @@
 .swiper-pagination-bullet {
     background-color: #FD5D02;
 }
+.clienticon {
+    font-size: 35px;
+    color: #FD5D02;
+    margin: auto;
+    display: block;
+    border: 4px solid #FD5D02;
+    border-radius: 62px;
+    padding: 20px;
+
+}
