--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,4 @@
 
-
-
 .inner-main-header .navbar-brand img {
   width: 100%;
   height: 140px;
@@ -17,7 +15,7 @@
 }
 .inner-main-header .navbar-nav .nav-item a {
   font-size: 19px;
-  color: #012451 !important;
+  color: #FD5D02 !important;
   text-transform: capitalize;
   font-family: "Oswald", sans-serif;
   margin: 0 20px 0 0;
@@ -36,13 +34,13 @@ height: 107px;
 }
 .inner-main-header .navbar-nav .nav-item
 {
-  margin: 0 17px 0 0;
+  margin: 0 20px 0 0;
 }
 .inner-main-header .navbar-nav .nav-item .nav-link.active {
   color: #FD5D02 !important;
 }
 .inner-main-header .navbar-nav .nav-item:hover a {
-  color: #FD5D02 !important;
+  color: #FD5D02!important;
 }
 
 /* Hide dropdown by default */
@@ -76,7 +74,7 @@ height: 107px;
 }
 .all-button:hover  {
   background-color: transparent;
-  color: black;
+  color: #FD5D02;
 }
 .all-button .svg-inline--fa {
  padding-left: 10px;
