--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -9,31 +9,33 @@
   display: block;
   height: 800px
 }
-.slider-text
-{
-position: absolute;
-  top: 0%;
-  right: 0%;
-display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 800px;
-  width: 100%;
- text-align: center;
- 
-  z-index: 111111111111111 !important;
-  
+.slider-text {
+    position: absolute;
+    top: 0%;
+    left: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 800px;
+    width: 40%;
+    text-align: center;
+    z-index: 111111111111111 !important;
 }
-.slider-text h2
-{
-  font-size: 48px;
-  margin-bottom: 20px;
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  color: white;
-  z-index: 1111111111111111111111111
-  ;
+.slider-text h2 {
+    font-size: 63px;
+    margin-bottom: 20px;
+    font-family: "Oswald", sans-serif;
+    font-weight: 600;
+    color: #FD5D02;
+    z-index: 1111111111111111111111111;
+   
+    text-transform: capitalize;
+}
+.allp.slidep {
+    font-size: 20px;
+    color: white;
+    margin: 14px 0 38px 0;
 }
 .swiper-button-prev, .swiper-button-next{
     color: #FD5D02 !important;
