--- a/src/components/Who.css
+++ b/src/components/Who.css
@@ -4,9 +4,10 @@
 }
 .who-img img {
     width: 100%;
+    height: 570px;
 }
 #who-section {
-    margin: 55px 0 55px 0;
+    margin: 90px 0 90px 0;
 }
 .who-text{
     padding: 0px 0 0 80px !important;
@@ -35,11 +36,11 @@
     margin: auto;
     display: block;
     margin-top: 20px;
-    background-color: #012451;
-    border-color: #012451;
+    background-color: #FD5D02;
+    border-color: #FD5D02;
 }
 .blue-div {
-    background-color: #012451;
+    background-color: #FD5D02;
     color: white;
     border-radius: 20px;
     padding: 30px 0 30px 0;
