--- a/src/components/Whyus.css
+++ b/src/components/Whyus.css
@@ -3,11 +3,13 @@ margin: 50px 0px;
 }
 .why-list ul li {
     list-style-type: none;
-    background-color: #FD5D02;
-    padding: 11px 17px 24px 17px;
-    margin: 15px 0;
+    background-color: transparent;
+    padding: 0px 17px 0px 17px;
+    margin: 0px 0;
     border-radius: 16px;
-    color: white;
+    color: #FD5D02;
+    height: 90px;
+  
 }
 .why-list ul {
     margin: 0;
@@ -20,17 +22,19 @@ margin: 50px 0px;
 .allp.whyp {
     margin: 0;
     padding-left: 5px;
-    color: white;
+    color: black;
 }
-.svg-inline--fa.fa-user-check.usericon.whyicon {
-   
-   
+.usericon.whyicon {
     font-size: 20px;
-   
+    position: relative;
     padding: 11px;
+    top: 52px;
+    left: -70px;
+    font-size: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 8px;
 }
 .whyus-img img {
     width: 100%;
-    height: 600px;
     margin-top: 22px;
 }
