--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -12,13 +12,13 @@
 .slider-text {
     position: absolute;
     top: 0%;
-    left: 100px;
+    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 800px;
-    width: 40%;
+    height: 100%;
+    width: 100%;
     text-align: center;
     z-index: 111111111111111 !important;
 }
@@ -36,6 +36,8 @@
     font-size: 20px;
     color: white;
     margin: 14px 0 38px 0;
+    max-width: 61%;
+    text-align: center;
 }
 .swiper-button-prev, .swiper-button-next{
     color: #FD5D02 !important;
