--- a/src/components/MVV.css
+++ b/src/components/MVV.css
@@ -17,6 +17,7 @@
     padding: 40px 15px 2px 15px !important;
     margin: 0 10px;
     width: 31.7% !important;
+    border-radius: 7px;
 }
 .missioncard h3,p
 {
