--- a/src/components/Cta.css
+++ b/src/components/Cta.css
@@ -67,4 +67,12 @@
     font-weight: 600;
     margin: auto;
     display: table;
+    border-radius: 7px;
+    transition: 0.5s;
+}
+.cta-button:hover
+{
+    background-color: #FD5D02;
+    color: white;
+    border-color: white;
 }
