--- a/src/components/Slotform.css
+++ b/src/components/Slotform.css
@@ -4,7 +4,7 @@
 }
 .form-check
 {
-  padding-left: 2px !important;
+  padding-left: 35px !important;
 }
 .form-check #checkDefault {
     margin-top: 13px;
@@ -15,9 +15,13 @@
     background-color: #FD5D02;
     color: white;
     font-family: "Oswald", sans-serif;
-    padding: 48px 16px 30px 16px !important;
-    border-radius: 40px;
+    padding: 48px 0px 30px 0px !important;
+    border-radius: 15px;
     height: 513px;
+}
+.formcontent h3
+{
+  padding-left: 13px;
 }
 .formcontent h3::after
 {
@@ -30,7 +34,7 @@
   margin-top: 10px;
 }
 .own-checkitems {
-    padding: 22px 0 0 18px;
+    padding: 22px 0 0 4px;
 }
 .own-checkitems span {
     color: #FD5D02;
@@ -44,12 +48,11 @@
 .formcontent p
 {
   font-family: 'Oswald', sans-serif;
-  font-weight: bold;
 }
 .formcontent ul
 {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 16px;
 }
 .formcontent ul li
 {
@@ -116,7 +119,7 @@ textarea
 }
 .service-image img{
   width: 100%;
-  height: 600px;
+  height: 640px;
   margin-top: 80px;
   border-radius: 15px;
 }
