--- a/src/components/Who.css
+++ b/src/components/Who.css
@@ -4,7 +4,6 @@
 }
 .who-img img {
     width: 100%;
-    height: 570px;
 }
 #who-section {
     margin: 90px 0 90px 0;
@@ -63,4 +62,7 @@
     color: black;
     text-align: center;
     margin-top: 17px;
+}
+.usericon {
+    font-size: 25px;
 }
