--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1,439 +1,667 @@
-@media (min-width:0px) and (max-width:767px) {
+a
+{
+    text-decoration: none !important;
+}
+@media (max-width:360px)
+{
+      .slider-text h2 {
+        font-size: 20px !important;
+    }
+    .allp.slidep
+    {
+      display: none;
+    }
+.cta-text
+{
+  width: 100% !important;
+}
+.cta-buttons
+{
+  width: 100% !important;
+}
+.why-list
+{
+  width: 100% !important;
+}
+.whyus-img
+{
+  width: 100% !important;
+}
+    .allp.footp {
+        padding-left: 0px !important;
+    }
+.mainlogo {
+    padding: 0px !important;
+}
+.mainft {
+    width: 100% !important;
+    padding-left: 0px !important;
+}
+}
+@media (max-width:480px)
+{
+ .slider-text h2 {
+        font-size: 20px !important;
+    }
+    .allp.slidep
+    {
+      display: none;
+    }
+.cta-text
+{
+  width: 100% !important;
+}
+.cta-buttons
+{
+  width: 100% !important;
+}
+.why-list
+{
+  width: 100% !important;
+}
+.whyus-img
+{
+  width: 100% !important;
+}
+    .allp.footp {
+        padding-left: 0px !important;
+    }
+.mainlogo {
+    padding: 0px !important;
+}
+.mainft {
+    width: 100% !important;
+    padding-left: 0px !important;
+}
+}
 
-  .container
-  {
-    padding: 0;
-    margin: 0;
-    max-width: 100% !important;
-  }
-  
-  /* NAVBAR - Mobile */
-  .inner-main-header .navbar {
-    padding: 10px 0;
+
+@media screen and (min-width:0px) and (max-width:767px) {
+   .get-quote {
+        margin-left: 12px;
+        display: none;
+    }
+   .navbar {
+    width: 100% !important;
+
+}
+    .nav-toggle {
+        float: right;
+        right: 0;
+    }
+    .nav-toggle span {
+background-color: #FD5D02;
+    }
+    .nav-container
+    {
+      margin: 0;
+    }
+.header-logo {
+    width: 33% !important;
+}
+    .inner-main-header .navbar-brand img {
+    height: 117px !important;
+}
+.navbar-toggler {
+    margin-right: 21px;
+}
+#navbarSupportedContent {
+    width: 90% !important;
+    margin: 0 10px;
+}
+.inner-main-header .navbar-nav .nav-item a {
+        font-size: 19px !important;
+        margin: 8px 13px 8px 11px;
+    }
+    .inner-main-header .navbar-nav .nav-item {
+    margin: 0px 0px 0 0;
+}
+      .slider-text {
+        height: auto;
+        left: 0;
+        width: 100%;
+        padding: 0 40px;
+        top: 8%;
+    }
+    .swiper-slide img {
     height: auto;
-  }
-  .inner-main-header .navbar-brand img {
-    width: 80px;
-    height: auto;
-  }
-  .inner-main-header .navbar-toggler {
+}
+    .slider-text h2 {
+    font-size: 40px;
+}
+        
+.allp.slidep 
+{
+        font-size: 18px;
+        padding: 0 38px;
+        max-width: 92%;
+    }
+.main-card {
+    
+    width: 100% !important;
     border: none;
-    padding: 5px;
-  }
-  .inner-main-header .navbar-toggler:focus {
-    box-shadow: none;
-  }
-  .inner-main-header .navbar-nav .nav-item a {
-    font-size: 16px;
-    margin: 8px 0;
-    padding: 10px 15px;
-    border-bottom: 1px solid #f0f0f0;
-  }
-  .inner-main-header .navbar-nav .nav-item:hover a {
-    border-bottom: 2px solid #FD5D02;
-  }
-  .inner-main-header .dropdown-menu {
-    background-color: #f8f8f8;
-    border: none;
-    padding-left: 20px;
-  }
-  .get-quote {
-    margin-left: 0;
-    padding: 15px 0;
-    width: 100%;
-    text-align: center;
-  }
-  .get-quote button {
-    font-size: 14px;
-    padding: 8px 20px;
-    width: 90%;
-  }
-  
-  /* SLIDER - Mobile */
-  .slider-text h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  .slider-text p.slidep {
-    font-size: 14px;
-    max-width: 95%;
-    margin: 10px 0 20px 0;
-  }
-  .slider-text button {
-    font-size: 12px;
-    padding: 8px 20px;
-  }
-  .swiper-button-prev, .swiper-button-next {
-    display: none;
-  }
-  
-  /* FOOTER - Mobile */
-  #footer-section {
-    padding: 30px 0 15px 0;
-  }
-  .mainlogo {
-    text-align: center;
-    padding: 0 15px;
-  }
-  .mainlogo img {
-    width: 100px;
-    height: auto;
-    margin-bottom: 15px;
-  }
-  .allp.footp {
-    font-size: 14px;
-    text-align: center;
-  }
-  .mainft h4 {
-    font-size: 18px;
-    margin-bottom: 15px;
-  }
-  .mainft h4::after {
-    margin: 10px auto 0;
-    width: 50px;
-  }
-  .mainft ul {
-    padding: 12px 0 0 0;
-  }
-  .mainft ul li {
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  .mainft ul li a {
-    font-size: 14px;
-  }
-  .mediaicons {
-    justify-content: center;
-    gap: 15px;
-  }
-  .mainft .mediaicons li a {
+    margin: 10px 0px !important;
+}
+.main-card h3 {
     font-size: 28px;
-  }
-  .rightp {
-    font-size: 12px;
-    margin-top: 20px;
-    padding: 0 15px;
-  }
-  .footer-main {
-    flex-direction: column;
-  }
-  
-.get-quote button {
-  font-size: 21px;
 }
-.get-quote {
-  margin-left: 12px;
-}
-.item-info img {
-  left: 47% !important;
-  width: 50px !important;
-  height: 50px !important;
-  top: -40px !important;
-}
-.item-info h3 {
-  width: 85%;
-}
-.inner-main-slider #owl-demo .item .item-info {
-  top: 25%;
-}
-.item-info p {
-  font-size: 28px;
-}
-
-.about-image {
-  width: 100%;
-}
-.about-detail {
-  margin: 12px 0 0 0;
-  width: 100%;
-}
-.about-heading p {
-  
-  font-size: 23px;
-}
-.blue-button {
-  
-  font-size: 20px;
-}
-.main-feature-list ul li {
-  display: grid;
-  width: 100%;
-}
-.service1 {
-  width: 100%;
-  margin: 0 0 0 0px;
-}
-.service-detail h2 {
-  font-size: 35px;
-}
-.service-detail p {
-  font-size: 22px;
-}
-.main-windows .about-images {
-  margin-top: 0%;
-  width: 100%;
-  margin-bottom: 30px;
-}
-.about-para p {
-  font-size: 22px;
-}
-.main-windows ul {
-  padding: 0;
-}
-.windows-icons ul li {
-  width: 50%;
-}
-.main-project #myTab .nav-item {
- 
-  margin: 0 1px 19px 48px;
-}
-.window-image {
-  margin-bottom: 13px;
-  width: 50%;
-}
-.call-main .form-group {
-  width: 100%;
-}
-.logo-one-footer {
-  width: 100%;
-}
-.one-footer {
-  /* WIDTH: 20%; */
-  width: 100%;
-}
-.logo-one-footer h2 {
-  margin-left: 0;
-}
-.logo-one-footer p {
-  max-width: 100%;
-  text-align: justify;
-  color: white;
-  padding-left: 0;
-  padding-top: 10px;
-  font-family: "Roboto", sans-serif;
-}
-.footer-outer {
-  margin-top: 40px;
-  padding: 0 15px 0 15px;
-}
-.about-images img {
-  border: none;
-}
-
-}
-
-/* Make images and iframes scale within their containers */
-img, iframe, video {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
-/* Tablet styles: 768px - 991px */
-@media (min-width:768px) and (max-width:991px) {
-  .container {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  
-  /* NAVBAR - Tablet */
-  .inner-main-header .navbar {
-    padding: 12px 0;
-  }
-  .inner-main-header .navbar-brand img {
-    width: 100px;
-    height: auto;
-  }
-  .inner-main-header .navbar-nav .nav-item a {
-    font-size: 18px;
-    margin: 0 15px;
-    padding: 5px 0;
-  }
-  .get-quote button {
-    font-size: 16px;
-    padding: 10px 24px;
-  }
-  
-  /* SLIDER - Tablet */
-  .slider-text h2 {
-    font-size: 36px;
-    margin-bottom: 15px;
-  }
-  .slider-text p.slidep {
-    font-size: 16px;
-    max-width: 80%;
-    margin: 12px 0 28px 0;
-  }
-  .slider-text button {
-    font-size: 14px;
-    padding: 10px 24px;
-  }
-  
-  /* FOOTER - Tablet */
-  #footer-section {
-    padding: 40px 15px 20px 15px;
-  }
-  .mainlogo {
-    text-align: center;
-  }
-  .mainlogo img {
-    width: 110px;
-    height: auto;
-    margin-bottom: 15px;
-  }
-  .mainft {
-    margin-top: 30px !important;
-    padding-left: 30px !important;
-    padding-right: 30px !important;
-  }
-  .mainft h4 {
-    font-size: 20px;
-  }
-  .mainft h4::after {
-    width: 60px;
-  }
-  .mainft ul li {
-    font-size: 16px;
-    margin-bottom: 12px;
-  }
-  .mainft ul li a {
+.allp {
     font-size: 15px;
-  }
-  .mainft .mediaicons li a {
-    font-size: 32px;
-  }
-  
-  .item-info p {
-    font-size: 20px;
-  }
-  .service-detail h2 {
+}
+.who-img{
+    width: 100% !important;
+    margin-bottom: 30px;
+}
+    .who-text {
+        width: 100% !important;
+        padding: 0 14px !important;
+    }
+#who-section {
+    margin: 0 0 0px 0;
+}
+.all-heading {
     font-size: 30px;
-  }
-  .service-detail p, .about-para p {
-    font-size: 18px;
-  }
-  .window-image {
-    width: 75%;
-  }
+}
+.subtitle {
+    font-size: 33px;
+}
+.all-services {
+    width: 100% !important;
+    margin: 17px 0px !important;
+}
+.ser-text h3 {
+    font-size: 25px;
+}
+.ser-text .allp.serp {
+    font-size: 16px;
+}
+.all-button.servbtn {
+    border-color: #FD5D02;
+    font-size: 14px;
+}
+#footer-section {
+    padding: 0 0px 20px 0px !important;
+}
+.mainlogo {
+    width: 100% !important;
+}
+.allp.footp {
+    padding-left: 5px !important;
+}
+.mainlogo img {
+    width: 150px !important;
+    margin: auto !important;
+    display: table !important;
+}
+.blue-div {
+    margin-top: 36px;
+}
+#services-section {
+    margin: 0 0 0px 0;
+}
+#why-us-section {
+    margin: 0 0px;
+}
+.why-list {
+    width: 100% !important ;
+}
+.usericon.whyicon {
+    font-size: 15px;
+    left: -59px;
+}
+.why-list ul li {
+    padding: 0px 17px 0px 70px;
+    height: auto;
+}
+.why-list ul li h3 {
+    font-size: 25px;
+}
+.whyus-img {
+    width: 100% !important;
+}
+    .cta-text h3 {
+        font-size: 31px;
+    }
+.blue-div ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+.blue-div li {
+    width: 50%;
+    padding: 15px 0 20px 13px;
 }
 
-/* Small desktops / large tablets: 992px - 1199px */
-@media (min-width:992px) and (max-width:1199px) {
-  /* NAVBAR - Small Desktop */
-  .inner-main-header .navbar {
-    padding: 15px 0;
-  }
-  .inner-main-header .navbar-brand img {
-    width: 120px;
-    height: auto;
-  }
-  .inner-main-header .navbar-nav .nav-item a {
-    font-size: 18px;
-    margin: 0 18px;
-  }
-  .get-quote button {
-    font-size: 16px;
-    padding: 10px 26px;
-  }
-  
-  /* SLIDER - Small Desktop */
-  .slider-text h2 {
-    font-size: 48px;
-  }
-  .slider-text p.slidep {
-    font-size: 18px;
-    max-width: 65%;
-  }
-  
-  /* FOOTER - Small Desktop */
-  #footer-section {
-    padding: 45px 0 20px 0;
-  }
-  .mainlogo img {
-    width: 120px;
-  }
-  .mainft {
-    margin-top: 35px !important;
-    padding-left: 60px !important;
-  }
-  .mainft h4 {
-    font-size: 22px;
-  }
-  .mainft ul li {
-    font-size: 16px;
-  }
-  .mainft .mediaicons li a {
-    font-size: 34px;
-  }
-  
-  .service-detail h2 {
-    font-size: 36px;
-  }
-  .item-info p {
-    font-size: 18px;
-  }
+.who-text {
+    margin-top: 40px !important;
 }
 
-/* Large desktops: 1200px and above */
-@media (min-width:1200px) {
-  /* NAVBAR - Large Desktop */
-  .inner-main-header .navbar {
-    padding: 18px 0;
-  }
-  .inner-main-header .navbar-brand img {
-    width: 140px;
-    height: auto;
-  }
-  .inner-main-header .navbar-nav .nav-item a {
-    font-size: 19px;
-    margin: 0 50px 0 0;
-    color: #FD5D02;
-  }
-  .inner-main-header .navbar-nav .nav-item:hover a {
-    border-bottom: 2px solid #FD5D02;
-  }
-  .get-quote button {
-    font-size: 16px;
-    padding: 10px 28px;
-  }
-  
-  /* SLIDER - Large Desktop */
-  .slider-text h2 {
-    font-size: 63px;
-  }
-  .slider-text p.slidep {
-    font-size: 20px;
-    max-width: 61%;
-  }
-  
-  /* FOOTER - Large Desktop */
-  #footer-section {
-    padding: 50px 0 20px 0;
-  }
-  .mainlogo img {
-    width: 130px;
-  }
-  .allp.footp {
-    font-size: 16px;
-  }
-  .mainft {
-    margin-top: 38px !important;
-    padding-left: 74px !important;
-  }
-  .mainft h4 {
-    font-size: 24px;
-  }
-  .mainft ul li {
-    font-size: 18px;
-  }
-  .mainft ul li a {
-    font-size: 18px;
-  }
-  .mainft .mediaicons li a {
-    font-size: 35px;
-  }
-  .rightp {
-    font-size: 16px;
-    margin-top: 30px;
-  }
+
+/* about-page */
+.banner-text {
+    top: 26%;
+    left: 26px;
 }
+#story-section {
+    margin: 50px 16px 50px 16px;
+}
+    .missioncard {
+        padding: 40px 15px 2px 15px !important;
+        margin: 60px 0;
+        width: 100% !important;
+    }
+.cardicon {
+    width: 16%;
+}
+
+#pills-tabContent {
+    margin: 0 8px 0 10px;
+}
+      #process-section {
+    margin: 50px 0px 50px 0px;
+} 
+.protext {
+    width: 100%;
+    float: right;
+}
+.proimage {
+    width: 100%;
+    float: left;
+}
+.protext p {
+    padding: 14px 0px;
+    margin: 0;
+}
+
+/* services-page */
+.storytext p {
+    margin: 24px 15px 0 15px;
+    font-size: 17px;
+}
+#innerpara {
+    margin: 60px 0px 0px 0px;
+}
+
+/* booking-page */
+#slotpara-section {
+    margin: 50px 14px 50px 14px;
+}
+.formcontent {
+    width: 90% !important;
+    margin: 0 41px;
+}
+.service-image {
+    display: none;
+}
+.mainform {
+    width: 90% !important;
+    margin: 25px 30px !important;
+}
+#slotpara-section {
+    margin: 50px 15px 50px 15px !important;
+}
+
+
+/* contact-page */
+.contact-icons {
+    width: 100% !important;
+}
+.contact-icons ul li {
+    margin: 0 48px !important;
+    display: inline-block;
+}
+.contact-form {
+    width: 100% !important;
+}
+#coninfo-section {
+    margin: 0 32px;
+}
+#faq-section {
+    margin: 50px 15px 50px 15px;
+}
+    .subtitle {
+        font-size: 25px;
+    }
+
+
+
+/* dementia-care */
+
+
+/* benefits */
+.benefits-cards ul li {
+    width: 92% !important;
+}
+   /* faq-section */
+
+.faq-image {
+    width: 100% !important;
+}
+.faq-accordion {
+    width: 100% !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width:768px) and (max-width:991px){
+
+ .inner-main-header .navbar-brand img {
+    width: 100%;
+    height: 116px !important;
+}
+
+ .get-quote {
+        margin-left: 12px;
+        display: none;
+    }
+   .navbar {
+    width: 100% !important;
+
+}
+.header-logo {
+    width: 33% !important;
+}
+    .slider-text h2
+     {
+    font-size: 37px;
+}
+.swiper-slide img {
+    height: 100%;
+}
+.ser-text .allp.serp {
+    height: 130px;
+}
+.allp.slidep {
+    font-size: 17px;
+}
+#who-section {
+    margin: 8px 0 37px 0;
+}
+.who-img {
+    width: 100% !important;
+}
+.who-text {
+    padding: 0px 0 0 0 !important;
+    width: 100% !important;
+}
+.blue-div ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+.blue-div li {
+    padding: 15px 0 20px 17px;
+    margin: auto;
+    width: 50%;
+}
+#services-section {
+    margin: 24px 0 50px 0;
+}
+.all-services {
+    width: 48% !important;
+    margin: 6px 6px;
+}
+#why-us-section {
+    margin: 0 0px;
+}
+.why-list {
+    width: 100% !important;
+}
+.usericon.whyicon {
+    font-size: 16px !important;
+    top: 45px;
+    left: -52px;
+}
+.whyus-img {
+    width: 100% !important;
+}
+#cta-section {
+    background-color: #FD5D02;
+    padding: 43px 0 40px 0;
+}
+.cta-text h3 {
+    font-size: 31px;
+}
+.mainlogo {
+    width: 100% !important;
+}
+.mainlogo img {
+    margin: auto;
+    display: table;
+}
+#footer-section {
+    background-color: white;
+}
+
+.who-text {
+    margin-top: 40px !important;
+}
+
+/* about-pge */
+.banner-text {
+    top: 40%;
+    left: 46px;
+}
+.missioncard {
+    margin: 0 5px;
+}
+.cardicon {
+    width: 64%;
+}
+#pills-tabContent {
+    border: 2px solid #FD5D02;
+    padding: 20px;
+    margin: 0 9px 0 10px;
+}
+.process-tabs ul li button {
+    margin: 0px 6px;
+    font-size: 15px;
+    border-radius: 0px;
+    border: 2px solid #FD5D02;
+    font-family: "Oswald", sans-serif;
+    border-radius: 0px !important;
+}
+
+.protext {
+    width: 100%;
+    float: none;
+}
+.proimage {
+    width: 100%;
+    float: none;
+}
+.protext p {
+    padding: 13px 0;
+    margin: 0;
+}
+.faq-image {
+    width: 100%;
+}
+.faq-accordion {
+    width: 100%;
+    margin-top: 10px;
+}
+
+/* service-page */
+           .banner-text {
+        top: 22%;
+        left: 67px;
+    }
+
+/* booking-page */
+.formcontent {
+    width: 100% !important;
+}
+.mainform {
+    width: 100% !important;
+}
+.service-image {
+    display: none;
+}
+#footer-section {
+    padding: 0 0px 20px 0px !important;
+}
+
+.benefits-cards ul li {
+    width: 91% !important;
+}
+.faq-image {
+    width: 100% !important;
+}
+.faq-accordion {
+    width: 100% !important;
+}
+}
+
+@media screen and (min-width:992px) and (max-width:1024px) {
+
+    .get-quote
+    {
+        display: none;
+    }
+    .navbar {
+    width: 100% !important;
+
+}
+.header-logo {
+    width: 33% !important;
+}
+.nav-toggle {
+        right: -276px !important;
+    }
+   .banner-text {
+    top: 35%;
+    left: 45px;
+}
+.slider-text h2 {
+    font-size: 45px;
+}
+.allp.slidep {
+    font-size: 17px;
+}
+#services-section {
+    margin: 0px 0 20px 0;
+}
+#why-us-section {
+    margin: 0 0px 50px 0;
+}
+.ser-text .allp.serp {
+    height: 152px;
+}
+#who-section {
+    margin: 10px 0 90px 0;
+}
+.blue-div li {
+    padding: 0px 0 20px 19px;
+    width: 49%;
+}
+    .all-services {
+        margin: 0 0 19px 19px;
+        width: 31.2% !important;
+    }
+.usericon.whyicon {
+    font-size: 16px !important;
+    padding: 9px;
+    top: 43px;
+    left: -45px;
+    font-size: 25px;
+}
+.cta-text h3 {
+    font-size: 43px;
+}
+.missioncard {
+    width: 30.7% !important;
+}
+.cardicon {
+    width: 47%;
+}
+.who-img img {
+    width: 100%;
+}
+
+/* about-us-page */
+.faq-image {
+    width: 50%;
+}
+.faq-accordion {
+    width: 50%;
+    margin-top: 10px;
+}
+/* booking-page */
+.mainform ul li {
+    width: 100%;
+}
+}
+
+@media screen and (min-width:1025px) and (max-width:1200px) {
+
+.header-logo {
+        width: 16% !important;
+    }
+#who-section {
+    margin: 0px 0 0px 0;
+}
+.blue-div ul
+{
+    margin: 0;
+    padding: 0;
+}
+.blue-div li {
+    padding: 0px 0 20px 19px;
+    width: 49%;
+}
+.all-services {
+        margin: 0 0 19px 19px;
+        width: 31.2% !important;
+    }
+    .usericon.whyicon {
+    padding: 8px;
+    top: 48px;
+    left: -55px;
+}
+.cta-text h3 {
+    font-size: 41px;
+}
+
+/* about-page */
+
+.banner-text {
+    top: 33%;
+    left: 72px;
+}
+
+.missioncard {
+    width: 30.7% !important;
+}
+
+.cardicon {
+    width: 47%;
+}
+
+
+
+}               
